// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CollapsibleSection stories snapshot > Closed story renders and matches snapshot 1`] = `
<details
  class="group border-b border-border"
>
  <summary
    class="flex items-center justify-between gap-4 py-4 text-base font-medium text-foreground cursor-pointer list-none [&::-webkit-details-marker]:hidden hover:bg-accent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-foreground transition-colors"
  >
    <span
      class="flex items-center gap-2"
    >
      Full description:
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-5 shrink-0 translate-y-0.5 transition-transform duration-200 group-open:rotate-180"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </summary>
  <div
    class="pb-4"
  />
</details>
`;

exports[`CollapsibleSection stories snapshot > Default story renders and matches snapshot 1`] = `
<details
  class="group border-b border-border"
  open=""
>
  <summary
    class="flex items-center justify-between gap-4 py-4 text-base font-medium text-foreground cursor-pointer list-none [&::-webkit-details-marker]:hidden hover:bg-accent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-foreground transition-colors"
  >
    <span
      class="flex items-center gap-2"
    >
      Description:
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-5 shrink-0 translate-y-0.5 transition-transform duration-200 group-open:rotate-180"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </summary>
  <div
    class="pb-4"
  >
    This is the collapsible body content.
  </div>
</details>
`;
